assets/style.css
/* Global styles */
/* Page width is different accross some elements and nav is pushing out farther
   than other elements, this is stopping that  */
html {
    /*  */
    overflow-x: hidden;
}

body {
    font-family: Roboto, Arial;
    min-height: 100vh;
    background-color: #fbfaf3;
    /* To push the footer down to the bottom of the page */
    display: flex;
    flex-direction: column;
    /* keeps the hero body fully visible, otherwise the nav covers some of it */
    padding-top: 58px;
    max-width: 1800px;
    margin-left: auto;
    margin-right: auto;
    /* Page width is different accross some elements and nav is pushing out
    farther than other elements, this is stopping that  */
    overflow-x: hidden;
}

main {
    width: inherit;
}

img {
    object-fit: cover;
}

.redText {
    color: rgb(255, 0, 0);
    text-decoration: underline;
}

.redBorder {
    border: red 1px solid;
}

.button {
    width: 120px;
    margin-top: 5px;
    margin-bottom: 10px;
    background-color: #c23311;
    color: aliceblue;
    padding: 5px;
    font-weight: bold;
    border-radius: 5px;
    text-decoration: none;
    border: 1px solid #c23311;
}

.cityCardBody:hover {
    box-shadow:
        1px 1px rgba(104, 95, 95, 0.37),
        -1px 0 rgba(104, 95, 95, 0.37);
    transition: box-shadow 0.4s ease-in-out;
}

/* On hover of link, element changes color */
.fa-brands:hover,
.cta:hover,
.button:hover {
    color: rgb(175, 175, 175) !important;
    transition: color 0.3s ease-in-out;
    cursor: pointer;
}

#parisCity:hover,
#londonCity:hover {
    cursor: pointer;
}

/* Nav */
nav {
    padding: 3px 0 3px 0 !important;
    /* Keeps the nav constantly visible */
    position: fixed !important;
    top: 0;
    width: 100%;
    max-width: 1800px;
    z-index: 10;
}

.nav-logo {
    color: aliceblue !important;
    /* font-size: 35px; */
}

.bg-nav {
    background-color: #0f1525;
}

.cta-div {
    margin-left: auto;
    float: right;
    font-weight: 700;
    background-color: #c23311;
    margin-top: 7px;
    padding: 0 5px 0 5px;
    border-radius: 5px;
    margin-bottom: 5px;
}

.cta {
    color: white !important;
}

/* Class added to center the cta at the bottom of the home page  */
.cta-bottom {
    margin-left: auto;
    margin-right: auto;
    max-width: 100px;
    padding: 10px 5px 10px 5px;
}

/* Home page Main styles */

/* Hero image */
#heroImg {
    width: 100%;
    height: 75vh;
    max-height: 700px;
}

/* City image cards */
div .card {
    margin: 5px;
    padding: 0px;
}

/* City card images */
.cityImage {
    min-width: 100%;
    height: 190px;
}

.cityCardBody {
    padding: 5px 0 0 0;
}

.cityCardOutlined {
    outline: #0f1525 solid 2px;
}

/* Partners sponsor cards */
.partnerSponsorCardImg {
    max-height: 268px;
}

/* Google maps API dispayed map*/
#map {
    width: 100%;
    height: 400px;
}

/* Booking page Main */

/* Package deal cards */
.blueCard {
    background-color: #4251d8 !important;
}
.packageButton {
    position: absolute;
    bottom: 0;
    justify-content: center;
}

.styleButtonActive {
    background-color: #ff4719;
    border: 1px solid black;
}

.packageCard .card-body {
    min-height: 210px;
}

/*  */
/* Form styles */

.cityActive {
    background-color: #ff4719;
    border: 1px black solid;
}

/* This toggles form input errors on and off by making them visible or 
invisible */
.inactiveError {
    visibility: hidden;
}

/* Success page & 404 Error page */
#success-main,
#error-main {
    position: absolute;
    top: 52px;
    bottom: 252.59px;
    width: 100%;
}

#success-page {
    text-align: center;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    left: 50%;
}

.success-checkmark {
    font-size: 100px;
    padding-bottom: 10px;
    color: lightgreen;
}

.fa-x {
    font-size: 100px;
    padding-bottom: 0;
    color: red;
}

/* Footer styles */

#footer {
    background-color: #212529;
    color: #ffffff;

    /* To push the footer down to the bottom of the page */
    margin-top: auto;
}

/* Social media links in the footer */
.fa-brands {
    font-size: 40px;
    margin: 9px;
    color: white;
}

.footerContacts {
    font-size: 20px;
    color: white;
}

/* Media devices (mobile, 375px and below) */
/* /* @media screen and (min-width: 320px) {
    .places-to-visit-card {
        max-width: 300px !important;
    }
} */

/* Media devices (376px and up */
@media screen and (min-width: 376px) {
    .places-to-visit-card {
        max-width: 350px !important;
    }
}

/* Media devices (Mobile, 576px and below) */
@media screen and (max-width: 576px) {
    #success-page {
        top: 37%;
    }

    .partnerSponsorCardImg {
        max-height: 188px;
    }

    .success-checkmark {
        font-size: 40px;
        padding-bottom: 0;
        color: lightgreen;
    }

    .fa-x {
        font-size: 40px;
        padding-bottom: 0;
        color: red;
    }

    .package-card-body {
        max-height: 420px !important;
    }

    .success-home-btn {
        background-color: #c23311;
        height: 37px;
        width: 190px;
        padding-top: 0;
    }

    #success-main,
    #error-main {
        position: absolute;
        top: 52px;
        bottom: 327px;
        width: 100%;
    }
}
/* Screen sizes 577px and up */
@media screen and (min-width: 577px) {
    .places-to-visit-card {
        max-width: 440px !important;
    }
}

/* Media devices (tablets, 768px and up) */
@media screen and (min-width: 768px) {
    .partnerSponsorCardImg {
        height: 200px;
    }

    .places-to-visit-card {
        max-width: 720px !important;
    }

    .package-card-body {
        min-height: 410px;
    }
}

/* Media devices (Laptops, 1024px and up) */
@media screen and (min-width: 1024px) {
    .partnerSponsorCardImg {
        height: 268px;
    }
}

/* Media devices (Up until 1400px */
@media screen and (min-width: 1400px) {
    .package-card-body {
        min-height: 350px !important;
    }
}

